examples/flounder-full/apps/backend/src/shared/errors/translated-http.exception.ts
import { HttpException } from "@nestjs/common";

export abstract class TranslatedHttpException extends HttpException {
  abstract translationKey: string;
}
